fix: improve css spacing

--- a/src/app/components/plan-card-list/plan-card-list.component.scss
+++ b/src/app/components/plan-card-list/plan-card-list.component.scss
@@ -20,10 +20,6 @@
   }
 }
 
-mat-card {
-  margin-top: 30px;
-}
-
 mat-card-actions {
   text-align: center;
   margin-bottom: unset;
